--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,21 @@
 .picture1 {
-    width: 70%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
 img {
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
+    
+}
+
+body {
+    background-color:blanchedalmond;
+}
+h1, a{
+    font-style: oblique;
+}
+.linkRecipe1 {
+    font-size: x-large;
 }
